--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   ionicons: ^0.2.2
   font_awesome_flutter: ^10.4.0
   carousel_slider: ^4.2.1
+  google_maps_flutter: ^2.2.6
+  label_marker: ^1.0.1
+  rive: ^0.10.4
 
 dev_dependencies:
   flutter_test:
@@ -60,18 +63,6 @@ flutter:
     - assets/images/doctor-strange-in-the-multiverse-of-madness-poster.jpg
 
     
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
   # fonts:
   #   - family: Schyler
   #     fonts:
